<resources>
    <string name="app_name">BraceletDemo</string>
    <string name="braceletState">手环未连接</string>
    <string name="braceletTemperature">——°</string>
    <string name="humidity">湿度 ——%</string>
    <string name="airQuality">PM2.5 ——</string>
    <string name="location">未知</string>
    <string name="airConditioner">空调</string>
    <string name="airConditionerState">未知</string>
    <string name="airConditionerTemperature">——°</string>
    <string name="fan">风扇</string>
    <string name="fanState">未知</string>
    <string name="fanSpeed">——%</string>
    <string name="window">窗户</string>
    <string name="windowWindSpeed">风速 ——</string>
    <string name="windowState">—</string>
    <string name="nav_header_subtitle">1721554825@qq.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_good">点赞</string>
    <string name="menu_follow">关注</string>
    <string name="menu_reward">三连求赏</string>
</resources>